--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.redisson</groupId>
 			<artifactId>redisson</artifactId>
 			<version>3.11.5</version>
@@ -42,7 +42,7 @@
 			<groupId>org.redisson</groupId>
 			<artifactId>redisson-spring-boot-starter</artifactId>
 			<version>3.10.6</version>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 
 	<build>
